--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,17 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - aidanacquah
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - OxWearables/actinet
+  - OxWearables/stepcount
+  - OxWearables/actipy
+  - OxWearables/asleep
+  - OxWearables/Oxford_Wearables_Activity_Recognition
+  - OxWearables/pd_walking
+  - OxWearables/ssl-wearables
+  - OxWearables/rap_wearables/
+  - OxWearables/Wearables_Activity_Recognition_R
+  - OxWearables/epidemiology_nhanes
+  - aidanacquah/b16-delivery-system
